feat: entrypoint v2, pt2
- feat(cli): entrypoint coroutines support
- feat(cli): begin refactor for clikt
- feat(cli): build-time init as default (continued)
- feat(embedded): build-time init as default
- feat(tools): tooling diagnostic structures in rust
- feat(python): initial support for pythonpath
- feat(python): initial runtime image for python
- fix(python): python should use `java` backend by default
- fix(transport): embed netty unix utils in kqueue
- fix: pin coroutines version for diagnosis
- chore: version bump → `1.0.0-alpha10`

Signed-off-by: Sam Gammon <sam@elide.ventures>